--- a/Week06/Day-04/templating-review/views/home.ejs
+++ b/Week06/Day-04/templating-review/views/home.ejs
@@ -7,6 +7,9 @@
   <title><%= title %></title>
 </head>
 <body>
-  <h1>Welcome back, <%= header %>!</h1>
+  <h1>Hello <%= header %>!</h1>
+  <% if (withGoodbye === 'true') { %>
+  <h2>Goodbye</h2>
+  <% } %>
 </body>
 </html>
