--- a/Week08/Day-03/rounded-buttons/styles.css
+++ b/Week08/Day-03/rounded-buttons/styles.css
@@ -1,33 +1,57 @@
+body {
+  background: rgb(180, 171, 171);
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .container {
   width: 100%;
   height: 400px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
 }
 
 .button {
   text-align: center;
   width: 50%;
   height: 125px;
-  padding: 20px;
-  border-radius: 20px;
+  margin: 15px;
+  border-radius: 10px;
   font-size: x-large;
   color: rgb(177, 167, 167);
   border: none;
 }
 
+.button:hover {
+ filter: brightness(90%);
+}
+
+.button:active {
+  filter: brightness(110%);
+}
+
+.button:focus {
+  outline: none;
+}
+
 .first {
   background-color: rgb(67, 67, 211);
-  box-shadow: 0 5px 4px 2px rgb(46, 46, 150);
+  box-shadow: 0 5px 4px 2px rgb(46, 46, 150), 0 -4px 4px 2px rgb(77, 77, 235);
 }
 
 .second {
   background-color: rgb(2, 104, 2);
-  box-shadow: 0 5px 4px 2px rgb(0, 85, 0);
+  box-shadow: 0 5px 4px 2px rgb(0, 85, 0), 0 -4px 4px 2px rgb(8, 126, 8);
 }
 
 .third {
   background-color: rgb(214, 20, 20);
-  box-shadow: 0 5px 4px 2px rgb(179, 6, 6);
+  box-shadow: 0 5px 4px 2px rgb(179, 6, 6), 0 -4px 4px 2px rgb(230, 47, 47);
 }
