--- a/Week07/Day-04/reddit-project/assets/style.css
+++ b/Week07/Day-04/reddit-project/assets/style.css
@@ -1,15 +1,42 @@
+body {
+  background-color: rgb(255, 228, 195);
+  margin: 0px;
+}
+
+#header {
+  overflow: hidden;
+  width: 100%;
+  height: 350px;
+  position: relative;
+  /* line-height: 350px; */
+  /* vertical-align: middle; */
+  text-align: center;
+  top: 0px;
+  left: 0px;
+}
+
 #headerImg {
   width: 100%;
-  height: 10%;
   position: relative;
+  top: 0px;
+  left: 0px;
 }
 
 #headerLogo {
   height: 100px;
   width: 110px;
   position: absolute;
+  top: 120px;
+  left: 100px;
+  opacity: 0.75;
 }
 
-#header {
-  position: relative;
+#header h2 {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  position: absolute;
+  top: 120px;
+  left: 34%;
+  opacity: 0.75;
+  color: whitesmoke;
+  font-size: 39px;
 }
