--- a/Week07/Day-04/reddit-project/assets/style.css
+++ b/Week07/Day-04/reddit-project/assets/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(255, 228, 195);
+  background-color: rgb(235, 229, 223);
   margin: 0px;
 }
 
@@ -8,6 +8,9 @@ body {
   width: 100%;
   height: 350px;
   position: relative;
+  background-image: url('ne0213-last-hubble-mission.jpg');
+  background-size: cover;
+  background-position: center;
   /* line-height: 350px; */
   /* vertical-align: middle; */
   text-align: center;
@@ -33,10 +36,56 @@ body {
 
 #header h2 {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 39px;
+  font-weight: 300;
   position: absolute;
   top: 120px;
   left: 34%;
   opacity: 0.75;
   color: whitesmoke;
-  font-size: 39px;
 }
+
+#submit-about-box {
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  width: 350px;
+  float: right;
+}
+
+#submit-button {
+  height: 35px;
+  width: 300px;
+  color: whitesmoke;
+  background-color: rgb(88, 88, 236);
+  border: none;
+  letter-spacing: 2px;
+}
+
+#about-us-content {
+  width: 300px;
+  position: relative;
+  /* padding: 10px; */
+}
+
+#about-us-content h3 {
+  /* position: absolute; */
+  background-color: rgb(248, 248, 248);
+  height: 40px;
+  line-height: 40px;
+  vertical-align: middle;
+  font-family: Arial, Helvetica, sans-serif;
+  letter-spacing: 2px;
+  font-weight: lighter;
+  padding-left: 10px;
+}
+
+#about-us-text {
+  background-color: rgb(221, 221, 221);
+  margin-top: -20px;
+  height: 300px;
+  padding-top: 10px;
+  padding-right: 20px;
+  line-height: 25px;
+}
+
