--- a/Week07/Day-04/reddit-project/assets/style.css
+++ b/Week07/Day-04/reddit-project/assets/style.css
@@ -57,7 +57,7 @@ body {
   margin: 40px;
   background-color: rgb(255, 251, 240);
   margin-bottom: -20px;
-  border: 1px solid rgb(117, 117, 117);
+  /* border: 1px solid rgb(117, 117, 117); */
   width: 500px;
   height: 100px;
   border-radius: 5px;
@@ -108,6 +108,7 @@ body {
   background-color: rgb(154, 202, 214);
   width: 100%;
   padding: 10px;
+  border-radius: 0px 5px 5px 0px;
 }
 
 .functionRow {
@@ -205,4 +206,3 @@ p {
   padding-right: 20px;
   line-height: 25px;
 }
-
