--- a/Week07/Day-04/reddit-project/assets/style.css
+++ b/Week07/Day-04/reddit-project/assets/style.css
@@ -108,7 +108,7 @@ body {
 
 .postBody {
   margin-left: 30px;
-  background-color: #B54213;
+  background-color: rgb(180, 72, 30);
   width: 100%;
   padding: 10px;
   border-radius: 0px 5px 5px 0px;
@@ -136,7 +136,7 @@ body {
 .editBtn {
   width: 30px;
   height: 30px;
-  background-color: #B54213;
+  background-color: rgb(180, 72, 30);
   color: rgb(61, 61, 61);
   font-size: 23px;
   text-align: center;
@@ -156,7 +156,7 @@ body {
 .deleteBtn {
   width: 30px;
   height: 30px;
-  background-color: #B54213;
+  background-color: rgb(180, 72, 30);
   color: rgb(61, 61, 61);
   font-size: 23px;
   text-align: center;
@@ -192,15 +192,20 @@ p {
   width: 30%;
   float: right;
   margin-top: 25px;
+  padding-bottom: 50px;
 }
 
 #submitNewPost {
   height: 35px;
   width: 90%;
   color: whitesmoke;
-  background-color: rgb(88, 88, 236);
+  background-color: rgb(150, 150, 240);
   border: none;
   letter-spacing: 2px;
+}
+
+#submitNewPost:hover {
+  background-color: rgb(88, 88, 236);
 }
 
 #about-us-content {
@@ -221,7 +226,7 @@ p {
 }
 
 #about-us-text {
-  background-color: #743800;
+  background-color: rgb(180, 72, 30);
   margin-top: -20px;
   height: 300px;
   padding-top: 10px;
@@ -244,6 +249,10 @@ p {
   background-color: rgb(150, 150, 240);
   border: none;
   letter-spacing: 2px;
+}
+
+.bounce:hover {
+  background-color: rgb(88, 88, 236);
 }
 
 @media screen and (max-width: 650px) {
