--- a/Week09/Day-04/quiz-app/assets/css/questions.css
+++ b/Week09/Day-04/quiz-app/assets/css/questions.css
@@ -1,12 +1,14 @@
-body {
-  overflow: hidden;
-  position: absolute;
+* {
+  box-sizing: border-box;
+}
+
+#main-content {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: rgb(199, 199, 199);
 }
 
 #all-questions {
@@ -14,6 +16,12 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 75%;
+  height: fit-content;
+  background-color: rgb(244, 250, 255);
+  margin-bottom: 35px;
+  border-radius: 10px;
+  padding: 15px;
 }
 
 #creation-box {
@@ -21,11 +29,50 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 75%;
+  background-color: rgb(244, 250, 255);
+  border-radius: 10px;
+  padding-top: 20px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  background-color:  rgb(244, 250, 255);
+  width: 75%;
+  justify-content: center;
+  align-items: center;
 }
 
 .question-box{
   display: flex;
   margin: 10px;
+}
+
+.text-input {
+  width: 70%;
+  height: 25px;
+  border-radius: 50px;
+}
+
+.input-field {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 20px;
+  padding-right: 120px;
+  width: 100%;
+}
+
+#submit-button {
+  width: 60px;
+  height: 35px;
+  color: white;
+  background-color: rgb(62, 62, 221);
+  margin: 40px;
+  border-radius: 50px;
+  border: none;
 }
 
 
