selected city's data is rendered to html

--- a/Week10/weather-api/templates/index.html
+++ b/Week10/weather-api/templates/index.html
@@ -4,9 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Weather API</title>
 </head>
 <body>
-  <div>Itt vagyok!</div>
+  <form action="">
+    <label for="">Choose your city: </label>
+    <input type="text">
+    <button type="submit">Choose</button>
+  </form>
 </body>
 </html>
