3 endpoints are set up

--- a/Week10/weather-api/templates/index.html
+++ b/Week10/weather-api/templates/index.html
@@ -9,7 +9,7 @@
 <body>
   <form action="">
     <label for="">Choose your city: </label>
-    <input type="text">
+    <input type="text" name="chosen_city">
     <button type="submit">Choose</button>
   </form>
 </body>
