cgi imported in but still not working properly

--- a/Week10/weather-api/templates/index.html
+++ b/Week10/weather-api/templates/index.html
@@ -7,9 +7,9 @@
   <title>Weather API</title>
 </head>
 <body>
-  <form action="">
-    <label for="">Choose your city: </label>
-    <input type="text" name="chosen_city">
+  <form action="http://127.0.0.1:5000/city" method="GET">
+    <label for="chosen_city">Choose your city: </label>
+    <input type="text" name="chosen_city" id="chosen_city">
     <button type="submit">Choose</button>
   </form>
 </body>
