form added to html

--- a/Week10/wikipedia-api/templates/index.html
+++ b/Week10/wikipedia-api/templates/index.html
@@ -4,5 +4,10 @@
   </head>
   <body>
     <h2>Wikipedia Api Challange</h2>
+    <form action="">
+      <label for="search_bar">What you want to know about the world?</label>
+      <input type="text" name="search_bar" id="search_bar"> <br>
+      <button type="submit">Search</button>
+    </form>
   </body>
 </html>
